--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StartActivity">
+        <activity android:name=".FirstActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -16,9 +16,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:name=".guessNumberActivity"
+            android:label="@string/gameName"
             android:theme="@style/AppTheme" />
+        <activity
+            android:name=".guessNumberStartActivity"
+            android:label="@string/menuDescription"
+            android:theme="@style/Theme.AppCompat.Dialog" />
     </application>
 
 </manifest>
